# json-buffet

./: .gitmodules  CMakeLists.txt  Readme.md  conanfile.txt  json-chunker-pq.cpp  main.cpp  vcpkg.json
data/: extract.sh  prepare_index.ipynb
data/extracted/xaa/: 1.json  10.json  11.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
tests/: test.json
